# ter-s-gallery-website

./: .gitignore  .htaccess  Readme.md  about.html  contact.html  detail-large-screen.html  detail-small-screen.html  detail.html  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  index.html  main.js  passenger_wsgi.py  product-page-app.js  products.html
.github/workflows/: ci.yml  deploy.yml
.sass-cache/8af7fceff8f863a2c6ea641db0884985648d3005/: base-styles.scssc  detail-styles.scssc  index-styles.scssc  products-styles.scssc
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/src/: Makefile  fixtures.json
backend/src/api/: admin.py  fields.py  models.py  serializers.py  urls.py  views.py
backend/src/api/migrations/: 0001_initial.py  0002_collection_is_main.py  0003_alter_collection_is_main.py  0004_alter_collection_is_main.py  0005_aboutpagesettings_material_image.py  0006_alter_aboutpagesettings_options_and_more.py  0007_aboutpagesettings_ideology_text_and_more.py
backend/src/config/: ckeditor_config.py  settings.py  urls.py  wsgi.py
backend/src/static/: disclosure.js  main.js  product-page-app.js  staticfiles.json
backend/src/static/styles/: about.css  about.css.49cb44c5a16d.map  base.css  contacts.2692261edcc4.css  contacts.css.map  index.css.map  products.css.map  swiper-shadow-elems.css  swiper-shadow-elems.css.63a8b53865a0.map  variables-mixin.671edc6c24ff.css  variables-mixin.css
backend/src/static/styles-sass/: about.scss  contacts.5193cb31521b.scss  detail.scss  index.e8feb6dbd33b.scss  products.880035170eba.scss  variables-mixin.scss
backend/src/templates/: about.html  detail.html  index.html  products.html
backend/src/templates/includes/: footer.html  header.html
django_ters/: Makefile  db.sqlite3  fixtures.json  manage.py  requirements.txt
django_ters/django_ters/: asgi.py  settings.py  urls.py  wsgi.py
django_ters/static/: product-page-app.js
django_ters/templates/: about.html  base.html  contacts.html  detail.html  index.html  products.html
django_ters/ters_gallery/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
frontend/: Dockerfile  about.html  app.vue  contact.html  detail.html  index.html  nuxt.config.ts  package-lock.json  package.json
frontend/components/: CustomCursor.vue  Footer.vue  Header.vue  PageLoader.vue  ProductCard.vue  ProductGrid.vue  Sidenav.vue
frontend/pages/: about.vue  contacts.vue  index.vue
frontend/src/: app.vue  package-lock.json
nginx/: nginx.conf
ters_gallery_django/: manage.py
(+121 files in other folders)
